--- a/frontend/src/components/BookOverview/BookOverview.css
+++ b/frontend/src/components/BookOverview/BookOverview.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: flex-start;
     overflow-y: auto;
-    height: 100vh;
+    height: 100%;
     width: 100%;
 }
 
